--- a/home.html
+++ b/home.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <!-- Daisyui CDN  -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <!-- Tailwind CDN  -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- font awesome cnd  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="./s.css">
 </head>
-<body>
-    <h1>I am Home Page</h1>
+
+<body class="bg-[#f4f5f7] h-[100vh]">
+
+    <div class="bg-white">
+        <div class="flex justify-between items-center  mx-auto min-h-[50px] w-[90%] border-b-1 border-gray-500 p-3 ">
+            <div class="flex ">
+                <img class="h-[50px]" src="./assets/Group.png" alt="">
+                <div class="ml-3">
+                    <h2 class="font-bold">$ <span>45000</span></h2>
+                    <p class="text-gray-500">Available Balance</p>
+                </div>
+            </div>
+            <div>
+                <button class="btn text-gray-600"><i
+                        class="fa-solid fa-arrow-right-from-bracket rotate-180"></i>Logout</button>
+            </div>
+        </div>
+
+        <!-- welcome  -->
+        <div class="max-w-lg mx-auto mt-4">
+            <h1 class="text-2xl font-bold">🔥 Welcome to Payooo!</h1>
+            <p class="text-gray-500 mt-3">Enjoy easy and convenient financial services with us. <br> Cashout charge is
+                low and </p>
+        </div>
+
+        <!-- button start from here -->
+        <div class="grid grid-cols-3 gap-4 min-h-[200px] max-w-lg justify-center items-center mx-auto mt-3">
+            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+                <img class="mx-auto" src="./assets/wallet1.png" alt="">
+                <h1>Add Money</h1>
+            </div>
+            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+                <img class="mx-auto" src="./assets/send1.png" alt="">
+                <h1>Cashout</h1>
+            </div>
+            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+                <img class="mx-auto" src="./assets/money1.png" alt="">
+                <h1>Transfer money</h1>
+            </div>
+            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+                <img class="mx-auto" src="./assets/bonus1.png" alt="">
+                <h1>Get Bonus</h1>
+            </div>
+            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+                <img class="mx-auto" src="./assets/purse1.png" alt="">
+                <h1>Pay Bill</h1>
+            </div>
+            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+                <img class="mx-auto" src="./assets/transaction1.png" alt="">
+                <h1>Transactions</h1>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="all-form-sections max-w-lg mx-auto">
+        <!-- add Money  -->
+        <div>
+            <h1 class="my-5 font-bold">Add Money</h1>
+            <form action="" class="bg-white rounded-2xl p-8">
+                <div>
+                    <h1 class="font-semibold">Select a bank</h1>
+                    <select class="select mt-3 w-full rounded-3xl bg-[#f4f5f7]">
+                        <option>Pick a Bank</option>
+                        <option>Chime Bank</option>
+                        <option>City Bank</option>
+                        <option>Mim Bank</option>
+                    </select>
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Bank Account Number</label> <br>
+                    <input type="text" placeholder=" Enter 11 Digit Account Number"
+                        class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Amount to Add</label> <br>
+                    <input id="" type="text" placeholder=" Add Amount to Withdraw"
+                        class="input w-full mt-3 rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Pin Number</label> <br>
+                    <input id="pin-number" type="text" placeholder=" Enter 4 Digit Pin"
+                        class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <button type="button" id="" class="btn bg-[#0874F2] text-white mt-5 w-full rounded-3xl">Add Money</button>
+            </form>
+        </div>
+
+
+    </div>
+
 </body>
+
 </html>
