--- a/home.html
+++ b/home.html
@@ -20,11 +20,12 @@
 <body class="bg-[#f4f5f7] h-[100vh]">
 
     <div class="bg-white">
-        <div class="flex justify-between items-center  mx-auto min-h-[50px] w-[90%] border-b-1 border-gray-500 p-3 ">
+        <!-- Balance and Logout -->
+        <div class="flex justify-between items-center  mx-auto min-h-[50px] max-w-lg border-b-1 border-gray-500 p-3 ">
             <div class="flex ">
                 <img class="h-[50px]" src="./assets/Group.png" alt="">
                 <div class="ml-3">
-                    <h2 class="font-bold">$ <span>45000</span></h2>
+                    <h2 class="font-bold">$ <span id="available-balance">45000</span></h2>
                     <p class="text-gray-500">Available Balance</p>
                 </div>
             </div>
@@ -43,42 +44,42 @@
 
         <!-- button start from here -->
         <div class="grid grid-cols-3 gap-4 min-h-[200px] max-w-lg justify-center items-center mx-auto mt-3">
-            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+            <div id="add-btn" class="form-btn border-2 p-4 border-gray-300 text-center rounded-lg">
                 <img class="mx-auto" src="./assets/wallet1.png" alt="">
                 <h1>Add Money</h1>
             </div>
-            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+            <div id="cashout-btn" class="form-btn border-2 p-4 border-gray-300 text-center rounded-lg">
                 <img class="mx-auto" src="./assets/send1.png" alt="">
                 <h1>Cashout</h1>
             </div>
-            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+            <div id="transfer-btn" class="form-btn border-2 p-4 border-gray-300 text-center rounded-lg">
                 <img class="mx-auto" src="./assets/money1.png" alt="">
                 <h1>Transfer money</h1>
             </div>
-            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+            <div id="get-bonus-btn" class="form-btn border-2 p-4 border-gray-300 text-center rounded-lg">
                 <img class="mx-auto" src="./assets/bonus1.png" alt="">
                 <h1>Get Bonus</h1>
             </div>
-            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+            <div id="paybill-btn" class="form-btn border-2 p-4 border-gray-300 text-center rounded-lg">
                 <img class="mx-auto" src="./assets/purse1.png" alt="">
                 <h1>Pay Bill</h1>
             </div>
-            <div class="border-2 p-4 border-gray-300 text-center rounded-lg">
+            <div id="transaction-btn" class="form-btn form-btn border-2 p-4 border-gray-300 text-center rounded-lg">
                 <img class="mx-auto" src="./assets/transaction1.png" alt="">
                 <h1>Transactions</h1>
             </div>
         </div>
     </div>
 
-
+    <!-- Form Section For All Form  -->
     <div class="all-form-sections max-w-lg mx-auto">
-        <!-- add Money  -->
-        <div>
+        <!-- add Money From -->
+        <div id="addmoney-parent" class="form">
             <h1 class="my-5 font-bold">Add Money</h1>
             <form action="" class="bg-white rounded-2xl p-8">
                 <div>
                     <h1 class="font-semibold">Select a bank</h1>
-                    <select class="select mt-3 w-full rounded-3xl bg-[#f4f5f7]">
+                    <select id="bank" class="select mt-3 w-full rounded-3xl bg-[#f4f5f7]">
                         <option>Pick a Bank</option>
                         <option>Chime Bank</option>
                         <option>City Bank</option>
@@ -87,26 +88,135 @@
                 </div>
                 <div class="mt-3">
                     <label class="font-semibold" for="">Bank Account Number</label> <br>
-                    <input type="text" placeholder=" Enter 11 Digit Account Number"
+                    <input id="account-number" type="text" placeholder=" Enter 11 Digit Account Number"
                         class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
                 </div>
                 <div class="mt-3">
                     <label class="font-semibold" for="">Amount to Add</label> <br>
-                    <input id="" type="text" placeholder=" Add Amount to Withdraw"
+                    <input id="add-amount" type="text" placeholder=" Add Amount to Withdraw"
                         class="input w-full mt-3 rounded-3xl bg-[#f4f5f7]" />
                 </div>
                 <div class="mt-3">
                     <label class="font-semibold" for="">Pin Number</label> <br>
-                    <input id="pin-number" type="text" placeholder=" Enter 4 Digit Pin"
+                    <input id="add-pin" type="text" placeholder=" Enter 4 Digit Pin"
                         class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
                 </div>
-                <button type="button" id="" class="btn bg-[#0874F2] text-white mt-5 w-full rounded-3xl">Add Money</button>
+                <button type="button" id="add-money-btn" class="btn bg-[#0874F2] text-white mt-5 w-full rounded-3xl">Add
+                    Money</button>
             </form>
         </div>
 
+        <!-- Cashout Form  -->
+        <div id="cashout-parent" class="form">
+            <h1 class="my-5 font-bold ">Cash Out </h1>
+            <form action="" class="bg-white rounded-2xl p-8">
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Agent Number</label> <br>
+                    <input type="text" placeholder=" Enter 11 Digit Agent Number"
+                        class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Amount</label> <br>
+                    <input id="withdraw-amount" type="text" placeholder=" Enter Amount to Withdraw"
+                        class="input w-full mt-3 rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Pin Number</label> <br>
+                    <input type="text" placeholder=" Enter 4 Digit Pin"
+                        class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <button id="withdraw-btn" type="button"
+                    class="btn bg-[#0874F2] text-white mt-5 w-full rounded-3xl">Withdraw Money</button>
+            </form>
+        </div>
+
+        <!-- Transfer Money Form  -->
+        <div id="transfer-parent" class="form ">
+            <h1 class="my-5 font-bold">Transfer Money</h1>
+            <form action="" class="bg-white rounded-2xl p-8">
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Personal Account Number</label> <br>
+                    <input id="transfer-number" type="text" placeholder=" Enter 11 Digit Account Number"
+                        class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Transfer Amount</label> <br>
+                    <input id="transfer-amount" type="text" placeholder=" Add Amount to Withdraw"
+                        class="input w-full mt-3 rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Pin Number</label> <br>
+                    <input id="add-pin" type="text" placeholder=" Enter 4 Digit Pin"
+                        class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <button type="button" id="add-money-btn"
+                    class="btn bg-[#0874F2] text-white mt-5 w-full rounded-3xl">Transfer Money</button>
+            </form>
+        </div>
+
+        <!-- Get Bonus Form  -->
+        <div id="get-bonus-parent" class="form">
+            <h1 class="my-5 font-bold">Get Bonus</h1>
+            <form action="" class="bg-white rounded-2xl p-8">
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Coupon Code</label> <br>
+                    <input id="" type="text" placeholder=" Enter Your Coupon Code"
+                        class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <button type="button" id="bonus-btn" class="btn bg-[#0874F2] text-white mt-5 w-full rounded-3xl">Get
+                    Bonus</button>
+            </form>
+        </div>
+
+        <!-- pay bill form  -->
+        <div id="paybill-parent" class="form">
+            <h1 class="my-5 font-bold">Pay Bill</h1>
+            <form action="" class="bg-white rounded-2xl p-8">
+                <div>
+                    <h1 class="font-semibold">Select a Biller</h1>
+                    <select id="bank" class="select mt-3 w-full rounded-3xl bg-[#f4f5f7]">
+                        <option>STAR NETWORK</option>
+                        <option>PLANET NETWORK</option>
+                        <option>SR NETWORK</option>
+                        <option>AIMTURN</option>
+                    </select>
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">ID Number</label> <br>
+                    <input id="account-number" type="text" placeholder=" Enter 6 Digit ID Number"
+                        class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Amount</label> <br>
+                    <input id="add-amount" type="text" placeholder="Enter Bill Amount to Pay"
+                        class="input w-full mt-3 rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <div class="mt-3">
+                    <label class="font-semibold" for="">Pin Number</label> <br>
+                    <input id="add-pin" type="text" placeholder=" Enter 4 Digit Pin"
+                        class="input mt-3 w-full rounded-3xl bg-[#f4f5f7]" />
+                </div>
+                <button type="button" id="add-money-btn" class="btn bg-[#0874F2] text-white mt-5 w-full rounded-3xl">Pay
+                    Bill</button>
+            </form>
+        </div>
+
+        <!-- Transection form  -->
+        <div id="transaction-parent" class="form">
+            <div class="flex justify-between items-center my-5">
+                <h1 class=" font-bold">Transactions History</h1>
+                <p class=""> View All</p>
+            </div>
+
+            <div id="transaction-container">
+
+            </div>
+
+        </div>
 
     </div>
 
+    <script src="./home.js"></script>
 </body>
 
 </html>
